# config_parser

./: CMakeLists.txt  README.md
include/: config_parser.h
src/: config_parser.c
test/: example1.cfg  example2.cfg  example3.cfg  test.c
